bin_PROGRAMS = gzipsimple ungzipsimple
gzipsimple_SOURCES = gzipsimple.cpp
gzipsimple_CPPFLAGS= -I../lib
gzipsimple_LDFLAGS=-L../lib
gzipsimple_LDADD = -lzlibcomplete
gzipsimple_DEPENDENCIES = ../lib/libzlibcomplete.la

ungzipsimple_SOURCES = ungzipsimple.cpp
ungzipsimple_CPPFLAGS= -I../lib
ungzipsimple_LDFLAGS=-L../lib
ungzipsimple_LDADD = -lzlibcomplete
ungzipsimple_DEPENDENCIES = ../lib/libzlibcomplete.la
