bin_PROGRAMS = gzipsimple ungzipsimple zlibsimple unzlibsimple
gzipsimple_SOURCES = gzipsimple.cpp
gzipsimple_CPPFLAGS= -I../lib
gzipsimple_LDFLAGS=-L../lib
gzipsimple_LDADD = -lzlibcomplete
gzipsimple_DEPENDENCIES = ../lib/libzlibcomplete.la

ungzipsimple_SOURCES = ungzipsimple.cpp
ungzipsimple_CPPFLAGS= -I../lib
ungzipsimple_LDFLAGS=-L../lib
ungzipsimple_LDADD = -lzlibcomplete
ungzipsimple_DEPENDENCIES = ../lib/libzlibcomplete.la

zlibsimple_SOURCES = zlibsimple.cpp
zlibsimple_CPPFLAGS= -I../lib
zlibsimple_LDFLAGS=-L../lib
zlibsimple_LDADD = -lzlibcomplete
zlibsimple_DEPENDENCIES = ../lib/libzlibcomplete.la

unzlibsimple_SOURCES = unzlibsimple.cpp
unzlibsimple_CPPFLAGS= -I../lib
unzlibsimple_LDFLAGS=-L../lib
unzlibsimple_LDADD = -lzlibcomplete
unzlibsimple_DEPENDENCIES = ../lib/libzlibcomplete.la

