bin_PROGRAMS = gzipsimple ungzipsimple zlibsimple unzlibsimple rawdeflater \
               rawinflater
gzipsimple_SOURCES = gzipsimple.cpp
gzipsimple_CPPFLAGS= -I../lib
gzipsimple_LDFLAGS=-L../lib
gzipsimple_LDADD = -lzlibcomplete
gzipsimple_DEPENDENCIES = ../lib/libzlibcomplete.la

ungzipsimple_SOURCES = ungzipsimple.cpp
ungzipsimple_CPPFLAGS= -I../lib
ungzipsimple_LDFLAGS=-L../lib
ungzipsimple_LDADD = -lzlibcomplete
ungzipsimple_DEPENDENCIES = ../lib/libzlibcomplete.la

zlibsimple_SOURCES = zlibsimple.cpp
zlibsimple_CPPFLAGS= -I../lib
zlibsimple_LDFLAGS=-L../lib
zlibsimple_LDADD = -lzlibcomplete
zlibsimple_DEPENDENCIES = ../lib/libzlibcomplete.la

unzlibsimple_SOURCES = unzlibsimple.cpp
unzlibsimple_CPPFLAGS= -I../lib
unzlibsimple_LDFLAGS=-L../lib
unzlibsimple_LDADD = -lzlibcomplete
unzlibsimple_DEPENDENCIES = ../lib/libzlibcomplete.la

rawdeflater_SOURCES = rawdeflater.cpp
rawdeflater_CPPFLAGS= -I../lib
rawdeflater_LDFLAGS=-L../lib
rawdeflater_LDADD = -lzlibcomplete
rawdeflater_DEPENDENCIES = ../lib/libzlibcomplete.la

rawinflater_SOURCES = rawinflater.cpp
rawinflater_CPPFLAGS= -I../lib
rawinflater_LDFLAGS=-L../lib
rawinflater_LDADD = -lzlibcomplete
rawinflater_DEPENDENCIES = ../lib/libzlibcomplete.la

