lib_LTLIBRARIES = libzlibcomplete.la
libzlibcomplete_la_SOURCES = zlibtop.cpp gzipcomplete.cpp zlibmisc.cpp raw.cpp
nobase_include_HEADERS = zlc/gzipcomplete.hpp zlc/zlibbase.hpp zlc/zlibcomplete.hpp zlc/zlibmisc.hpp zlc/zlibraw.hpp

libzlibcomplete_la_CPPFLAGS = -I.
libzlibcomplete_la_LDFLAGS  = -version-info 0:0:0
